spacing fixes

--- a/style.css
+++ b/style.css
@@ -38,7 +38,7 @@ ul li {
 	}
 	p1{
 	float: left;
-	front-family :Arial;
+	font-family :Bookman;
 	text-decoration: none;
 	color:gray;
 	}
